# gorak

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: commands.md  config.md  development.md  files.md  remote.md
src/gorak/: __init__.py  audit.py  cli.py  connection.py  database.py  domain.py  export.py  field_defaults.py  local.py  parser.py  project.py  remote.py  sql_output.py  sync.py  sync_state.py
src/gorak/remote_scripts/: README.md  __init__.py  applist.sql  backup-application.bat  get-app-list.bat  get-component-list.bat  get-component-sync-metadata.bat  get-include-list.bat  gorak-helpers.json
src/openroad_vscode_sync/: __init__.py  parser.py
tests/: _helpers.py  test_audit.py  test_cli.py  test_connection.py  test_database.py  test_export.py  test_field_defaults.py  test_local.py  test_parser.py  test_parser_acceptance.py  test_project.py  test_remote.py  test_sql_output.py  test_sync.py
tests/cli/: test_app.py  test_component.py  test_config.py  test_debug.py  test_defaults.py  test_encode.py  test_errors.py  test_new.py  test_remote.py  test_sync.py
tests/fixtures/: fm_complex_frame.w4gl  fm_complex_frame.wml  fm_complex_frame.xml  fm_example_frame.4gl  fm_example_frame.wml  fm_example_frame.xml  gorak_examples.xml  p4_example_procedure.w4gl  p4_example_procedure.xml  uc_example_userclass.w4gl  uc_example_userclass.xml
tests/fixtures/example.skel/: .env.example  field_defaults.json  gorak.json
tests/fixtures/example.skel/example_application/: app.json  p4_init.w4gl
utils/: llm_summary.sh
utils/win_ssh_remote/: README.md  backup-component.bat  get-component-list.bat
