[project]
name = "openroad-vscode-sync"
version = "0.1.0"
description = "Disk-based Git/VSCode bridge for Actian OpenROAD"
readme = "README.md"
authors = [
    { name = "Doug White", email = "doug.white@versatechit.com.au" }
]
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.0.2",
    "psutil>=7.2.2",
    "tomlkit>=0.14.0",
    "watchdog>=6.0.0",
]

[project.scripts]
openroad-vscode-sync = "openroad_vscode_sync:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
